third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/space.stderr
TOML parse error at line 1, column 3
  |
1 | a b = 1
  |   ^
expected `.`, `=`
